--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,9 +10,8 @@ edition = "2018"
 failure = "0.1"
 log = "0.4"
 serde = { version="1.0", features=["derive"] }
-strum = "0.16.0"
-strum_macros = "0.16.0"
-tokio = "0.2.0-alpha.6"
-reqwest = { version="0.10.0-alpha.2", features=["json"] }
+strum = "0.18"
+strum_macros = "0.18"
+reqwest = { version="0.10", features=["json"] }
 chrono = { version = "0.4", features=["serde"] }
 colored = "1"
