--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -10,11 +10,12 @@ edition = "2018"
 rebuilderd-common = { path="../common" }
 structopt = "0.3"
 env_logger = "0.7"
-actix-web = "2.0.0-alpha.1"
+actix-rt = "1.0.0"
+actix-web = "2.0.0"
 diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
 diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
 chrono = { version = "0.4", features=["serde"] }
-dotenv = "0.10"
+dotenv = "0.15"
 serde = { version="1.0", features=["derive"] }
 
 # https://crates.io/crates/deb-version
