--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -10,8 +10,8 @@ edition = "2018"
 rebuilderd-common = { path="../common" }
 structopt = "0.3"
 env_logger = "0.7"
-tokio = "0.2.0-alpha.6"
-reqwest = { version="0.10.0-alpha.2", features=["json"] }
+tokio = { version="0.2", features=["macros"] }
+reqwest = { version="0.10.0", features=["json"] }
 chrono = { version = "0.4", features=["serde"] }
 rust-lzma = "0.5.1"
 tar = "0.4"
