--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -11,3 +11,6 @@ rebuilderd-common = { path="../common" }
 structopt = "0.3"
 env_logger = "0.7"
 tokio = { version="0.2", features=["macros"] }
+dirs = "2.0"
+sodiumoxide = { version="0.2.5", features=["use-pkg-config"] }
+base64 = "0.10"
