--- a/worker/Dockerfile.alpine
+++ b/worker/Dockerfile.alpine
@@ -1,16 +1,13 @@
 FROM rust:alpine3.10
 ENV RUSTFLAGS="-C target-feature=-crt-static"
 WORKDIR /usr/src/rebuilderd
-RUN apk add --no-cache musl-dev openssl-dev
+RUN apk add --no-cache musl-dev openssl-dev pkgconfig libsodium-dev
 COPY . .
-RUN cd daemon; cargo build --release
-RUN cd tools; cargo build --release
+RUN cd worker; cargo build --release
 
 FROM alpine:3.10
-ENV HTTP_ADDR=0.0.0.0:8080
-RUN apk add --no-cache libgcc openssl
+RUN apk add --no-cache libgcc openssl libsodium
 COPY --from=0 \
-    /usr/src/rebuilderd/target/release/rebuilderd \
-    /usr/src/rebuilderd/target/release/rebuildctl \
+    /usr/src/rebuilderd/target/release/rebuilderd-worker \
     /usr/local/bin/
-CMD ["rebuilderd"]
+CMD ["rebuilderd-worker"]
