--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -12,6 +12,6 @@ log = "0.4"
 serde = { version="1.0", features=["derive"] }
 strum = "0.18"
 strum_macros = "0.18"
-reqwest = { version="0.10", features=["json"] }
+reqwest = { version="0.10", features=["blocking", "json"] }
 chrono = { version = "0.4", features=["serde"] }
 colored = "1"
