--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "rebuilderd-common"
 version = "0.1.0"
-authors = ["user"]
+description = "rebuilderd - common code"
+authors = ["kpcyrd <git@rxv.cc>"]
+license = "GPL-3.0"
+repository = "https://github.com/kpcyrd/rebuilderd"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
