--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -18,5 +18,7 @@ chrono = { version = "0.4", features=["serde"] }
 rust-lzma = "0.5.1"
 tar = "0.4"
 flate2 = "1.0"
+serde = { version="1.0", features=["derive"] }
 serde_json = "1.0"
 colored = "1"
+toml = "0.5.6"
