Refactor worker workdir code

--- a/contrib/systemd/rebuilderd-worker@.service
+++ b/contrib/systemd/rebuilderd-worker@.service
@@ -2,9 +2,7 @@
 Description=rebuilderd-worker: rebuild packages
 
 [Service]
-# TODO
-ExecStart=/usr/bin/rebuilderd-worker connect http://127.0.0.1:8080
-WorkingDirectory=/var/lib/rebuilderd-worker
+ExecStart=/usr/bin/rebuilderd-worker -n %I connect
 
 [Install]
 WantedBy=multi-user.target
