--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -13,6 +13,7 @@ edition = "2018"
 rebuilderd-common = { version="0.1.0", path="../common" }
 structopt = "0.3"
 env_logger = "0.7"
-dirs = "2.0"
 sodiumoxide = { version="0.2.5", features=["use-pkg-config"] }
 base64 = "0.10"
+toml = "0.5.6"
+serde = { version="1.0", features=["derive"] }
