--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -20,5 +20,7 @@ diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
 chrono = { version = "0.4", features=["serde"] }
 dotenv = "0.15"
 serde = { version="1.0", features=["derive"] }
+rand = "0.7.3"
+dirs = "2.0.2"
 
 # https://crates.io/crates/deb-version
