Start authenticating workers

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -1,1 +1,4 @@
+## The rebuilderd to connect to
 endpoint = "http://127.0.0.1:8080"
+## The server would either whitelist our key or require a signup secret
+#signup_secret = "your_signup_key"
