--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -1,6 +1,18 @@
+## Configuration for http daemon
+#[http]
+#bind_addr = "0.0.0.0:8080"
+
 ## A random cookie for administration is generated at startup and written to /var/lib/rebuilderd/auth-cookie
 ## You can set this to a fixed value here. Use `pwgen -1A0s 32` to generate one
 ## rebuildctl is searching for this cookie in ~/.config/rebuilderd.conf, /etc/rebuilderd.conf and
 ## /var/lib/rebuilderd/auth-cookie in that order.
 #[auth]
 #cookie = "INSECURE"
+
+## IMPORTANT: in production, make sure either `authorized_workers` or `signup_secret` is configured
+#[worker]
+## If we have a fixed set of workers we can whitelist the keys here.
+#authorized_workers = ["key1", "key2"]
+## If we want to spawn new workers dynamically we can configure a sign up secret below.
+## Use `pwgen -1A0s 32` to generate one.
+#signup_secret = "INSECURE"
