--- a/contrib/systemd/rebuilderd.service
+++ b/contrib/systemd/rebuilderd.service
@@ -4,7 +4,7 @@ Description=rebuilderd: independent binary package verification system
 [Service]
 User=rebuilderd
 Environment="REBUILDERD_COOKIE_PATH=/var/lib/rebuilderd/auth-cookie"
-ExecStart=/usr/bin/rebuilderd
+ExecStart=/usr/bin/rebuilderd -c /etc/rebuilderd.conf
 WorkingDirectory=/var/lib/rebuilderd
 
 [Install]
