--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -22,5 +22,6 @@ dotenv = "0.15"
 serde = { version="1.0", features=["derive"] }
 rand = "0.7.3"
 dirs = "2.0.2"
+toml = "0.5.6"
 
 # https://crates.io/crates/deb-version
