--- a/worker/Dockerfile.debian
+++ b/worker/Dockerfile.debian
@@ -5,7 +5,11 @@ COPY . .
 RUN cd worker; cargo build --release
 
 FROM debian:buster
-RUN apt-get update && apt-get install -y libssl-dev libsodium-dev
+RUN echo 'deb http://deb.debian.org/debian buster-backports main' > /etc/apt/sources.list.d/backports.list
+RUN apt-get update && apt-get install -y libssl-dev libsodium-dev devscripts/buster-backports sbuild
+COPY --from=0 \
+    /usr/src/rebuilderd/worker/rebuilder-debian.sh \
+    /usr/local/libexec/rebuilderd/
 COPY --from=0 \
     /usr/src/rebuilderd/target/release/rebuilderd-worker \
     /usr/local/bin/
