Fix typo in example config

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -8,7 +8,7 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
 ## rebuild community packages of specific maintainers
 #[profile."archlinux-community"]
 #distro = "archlinux"
-#suite = "core"
+#suite = "community"
 #architecture = "x86_64"
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/community/os/x86_64/community.db"
 #maintainer = ["somebody"]
