Support whitelisting individual packages as well

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -5,10 +5,13 @@ suite = "core"
 architecture = "x86_64"
 source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
 
-## rebuild community packages of specific maintainers
+## rebuild community packages of specific maintainers, or whitelist packages by name.
+## If no filter is set, all packages are imported, if both filters are set the package only
+## has to match one of them to be included.
 #[profile."archlinux-community"]
 #distro = "archlinux"
 #suite = "community"
 #architecture = "x86_64"
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/community/os/x86_64/community.db"
-#maintainer = ["somebody"]
+#maintainers = ["somebody"]
+#pkgs = ["some-pkg", "some-other"]
