--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -14,4 +14,5 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
 #architecture = "x86_64"
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/community/os/x86_64/community.db"
 #maintainers = ["somebody"]
-#pkgs = ["some-pkg", "some-other"]
+#pkgs = ["some-pkg", "python-*"]
+#excludes = ["tensorflow*"
