Add missing ] to excludes example in rebuilderd-sync.conf
Signed-off-by: Jelle van der Waa <jelle@archlinux.org>

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -15,4 +15,4 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/community/os/x86_64/community.db"
 #maintainers = ["somebody"]
 #pkgs = ["some-pkg", "python-*"]
-#excludes = ["tensorflow*"
+#excludes = ["tensorflow*"]
