Don't ignore errors with invalid configs

--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -9,6 +9,12 @@
 #[auth]
 #cookie = "INSECURE"
 
+## The auth cookie above is only used for the default endpoint.
+## You can use different endpoints with `rebuildctl -H https://rebuilder.example.com status`,
+## In that case you need to configure a section below if you want to attach a cookie.
+#[endpoints."https://rebuilder.example.com"]
+#cookie = "INSECURE"
+
 ## IMPORTANT: in production, make sure either `authorized_workers` or `signup_secret` is configured.
 #[worker]
 ## If we have a fixed set of workers we can whitelist the keys here.
