Automatically restart systemd unit

--- a/contrib/systemd/rebuilderd-worker@.service
+++ b/contrib/systemd/rebuilderd-worker@.service
@@ -4,5 +4,8 @@ Description=rebuilderd-worker: rebuild packages
 [Service]
 ExecStart=/usr/bin/rebuilderd-worker -n %i connect
 
+Restart=always
+RestartSec=0
+
 [Install]
 WantedBy=multi-user.target
