--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -1,6 +1,9 @@
 ## Configuration for http daemon
 #[http]
+## The address to bind to. This is 127.0.0.1:8484 by default.
 #bind_addr = "0.0.0.0:8484"
+## Set a default endpoint for rebuildctl. This is especially useful for the sync timer.
+#endpoint = "http://127.0.0.1:8484"
 
 ## A random cookie for administration is generated at startup and written to /var/lib/rebuilderd/auth-cookie
 ## You can set this to a fixed value here. Use `pwgen -1s 32` to generate one.
