Update documentation for source url change

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -3,7 +3,7 @@
 distro = "archlinux"
 suite = "core"
 architecture = "x86_64"
-source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
+source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 
 ## rebuild community packages of specific maintainers, or whitelist packages by name.
 ## If no filter is set, all packages are imported, if both filters are set the package only
@@ -12,7 +12,7 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/core/os/x86_64/core.db"
 #distro = "archlinux"
 #suite = "community"
 #architecture = "x86_64"
-#source = "https://ftp.halifax.rwth-aachen.de/archlinux/community/os/x86_64/community.db"
+#source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 #maintainers = ["somebody"]
 #pkgs = ["some-pkg", "python-*"]
 #excludes = ["tensorflow*"]
