--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -17,3 +17,6 @@ sodiumoxide = { version="0.2.5", features=["use-pkg-config"] }
 base64 = "0.10"
 toml = "0.5.6"
 serde = { version="1.0", features=["derive"] }
+reqwest = "0.10.4"
+tempfile = "3.1.0"
+url = "2.1.1"
