--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -7,7 +7,15 @@ license = "GPL-3.0"
 repository = "https://github.com/kpcyrd/rebuilderd"
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[package.metadata.deb]
+depends = "$auto, rebuilderd"
+assets = [
+    ["target/release/rebuilderd-worker", "usr/bin/", "755"],
+    ["rebuilder-archlinux.sh", "usr/libexec/rebuilderd/", "755"],
+    ["rebuilder-debian.sh", "usr/libexec/rebuilderd/", "755"],
+    ["../contrib/confs/rebuilderd-worker.conf", "etc/", "640"],
+    ["../contrib/systemd/rebuilderd-worker@.service", "usr/lib/systemd/system/", "640"],
+]
 
 [dependencies]
 rebuilderd-common = { version="=0.4.0", path="../common" }
