Support running diffoscope

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -2,3 +2,5 @@
 endpoint = "http://127.0.0.1:8484"
 ## The server would either whitelist our key or require a signup secret
 #signup_secret = "your_signup_key"
+## use diffoscope to generate diffs (default: false)
+#gen_diffoscope = true
