--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-failure = "0.1"
+anyhow = "1.0.32"
 log = "0.4"
 serde = { version="1.0", features=["derive"] }
 strum = "0.19"
