--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -20,3 +20,5 @@ chrono = { version = "0.4", features=["serde"] }
 colored = "2"
 dirs = "3"
 toml = "0.5.6"
+base64-serde = "0.6.1"
+base64 = "0.13.0"
