Add timeout and max_bytes support to diffoscope integration

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -1,6 +1,15 @@
 ## The rebuilderd to connect to
 endpoint = "http://127.0.0.1:8484"
-## The server would either whitelist our key or require a signup secret
+## The server would either allowlist our key or require a signup secret
 #signup_secret = "your_signup_key"
-## use diffoscope to generate diffs (default: false)
-#gen_diffoscope = true
+
+[diffoscope]
+## Generate and attach diffs with diffoscope when rebuilding
+enabled = false
+## Pass additional arguments to diffoscope. Use wisely, some options might not work well.
+#args = ["--max-container-depth", "2", "--fuzzy-threshold", "0"]
+## Set a timeout in seconds after which diffoscope is terminated (default: 3600)
+#timeout = 600 # 10 minutes
+## Set a maximum diffoscope output limit in bytes (default: none).
+## When reaching this limit, diffoscope is terminated and the output is truncated.
+max_bytes = 41943040 # 40 MiB
