--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -28,7 +28,7 @@ serde = { version="1.0", features=["derive"] }
 reqwest = { version="0.10.4", features = ["stream"] }
 tempfile = "3.1.0"
 url = "2.1.1"
-tokio = { version="0.3.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std"] }
+tokio = { version="0.3.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
 futures-util = "0.3.7"
 futures = "0.3.7"
 tokio-compat-02 = "0.1.2"
