--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -15,3 +15,5 @@ env_logger = "0.8"
 colored = "2"
 tempfile = "3"
 actix-rt = "1.0.0"
+tokio = { version="0.3.2", features=["macros", "rt-multi-thread"] }
+futures = "0.3.8"
