--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -28,7 +28,7 @@ serde = { version="1.0", features=["derive"] }
 serde_json = "1.0"
 colored = "2"
 toml = "0.5.6"
-dirs = "3"
+dirs-next = "2"
 glob = "0.3.0"
-nom = "5.1.1"
+nom = "6"
 tokio = { version="0.3.2", features=["macros", "rt-multi-thread"] }
