Update default worker config with new [build] section

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -3,6 +3,12 @@ endpoint = "http://127.0.0.1:8484"
 ## The server would either allowlist our key or require a signup secret
 #signup_secret = "your_signup_key"
 
+[build]
+#timeout = 86400 # 24 hours
+## Set a maximum build log limit in bytes (default: none).
+## When reaching this limit the log is truncated but the rebuilder backend is *not* terminated.
+max_bytes = 10485760 # 10 MiB
+
 [diffoscope]
 ## Generate and attach diffs with diffoscope when rebuilding
 enabled = false
