--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -8,6 +8,9 @@ endpoint = "http://127.0.0.1:8484"
 ## Set a maximum build log limit in bytes (default: none).
 ## When reaching this limit the log is truncated but the rebuilder backend is *not* terminated.
 max_bytes = 10485760 # 10 MiB
+## By default build output is forwarded to stdout/stderr.
+## This can be disabled by settings this to true.
+#silent = true
 
 [diffoscope]
 ## Generate and attach diffs with diffoscope when rebuilding
