Group packages by pkgbase when sending to daemon

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -16,3 +16,10 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 #maintainers = ["somebody"]
 #pkgs = ["some-pkg", "python-*"]
 #excludes = ["tensorflow*"]
+
+## TODO: we still need to figure out details
+[profile."debian-sid"]
+distro = "debian"
+suite = "main"
+architecture = "amd64"
+source = "http://deb.debian.org/debian"
