--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -31,4 +31,4 @@ toml = "0.5.6"
 dirs-next = "2"
 glob = "0.3.0"
 nom = "6"
-tokio = { version="0.3.2", features=["macros", "rt-multi-thread"] }
+tokio = { version="0.3.2", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
