Update docs for --architecture and --release

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -1,25 +1,25 @@
-## rebuild all of core
+## rebuild all of archlinux core
 [profile."archlinux-core"]
 distro = "archlinux"
 suite = "core"
-architecture = "x86_64"
+architectures = ["x86_64"]
 source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 
-## rebuild community packages of specific maintainers, or whitelist packages by name.
+## rebuild community packages of specific maintainers, or allow-list packages by name.
 ## If no filter is set, all packages are imported, if both filters are set the package only
 ## has to match one of them to be included.
 #[profile."archlinux-community"]
 #distro = "archlinux"
 #suite = "community"
-#architecture = "x86_64"
+#architectures = ["x86_64"]
 #source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 #maintainers = ["somebody"]
 #pkgs = ["some-pkg", "python-*"]
 #excludes = ["tensorflow*"]
 
-## TODO: we still need to figure out details
-[profile."debian-sid"]
+[profile."debian-main"]
 distro = "debian"
 suite = "main"
-architecture = "amd64"
+architectures = ["amd64"]
+releases = ["buster", "sid"]
 source = "http://deb.debian.org/debian"
