--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,12 +8,12 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3"
-rebuilderd-common = { version= "= 0.9.1", path="../common" }
-rebuilderd = { version= "= 0.9.1", path="../daemon" }
-env_logger = "0.8"
+actix-web = "3"
 colored = "2"
-tempfile = "3"
-actix-rt = "1.0.0"
-tokio = { version="0.3.2", features=["macros", "rt-multi-thread"] }
+env_logger = "0.8"
 futures = "0.3.8"
+rebuilderd = { version= "= 0.9.1", path="../daemon" }
+rebuilderd-common = { version= "= 0.9.1", path="../common" }
+structopt = "0.3"
+tempfile = "3"
+tokio = { version="1", features=["macros", "rt-multi-thread"] }
