--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -32,3 +32,4 @@ dirs-next = "2"
 glob = "0.3.0"
 nom = "6"
 tokio = { version="1", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
+atty = "0.2.14"
