w:Dockerfile.debian: ->bullseye + mmbdebstrap
In order to build debian packages on debian machines, we need a newer
suite of mmdebstrap for srebuild. Update to the up-and-coming debian
stable (bullseye, now testing) to use a newer (now also explicitly
installed) mmdebstrap.

Lastly, to keep things consistent between Dockerfiles, use ENTRYPOINT
rather than CMD (this also keeps things a little neater when issuing
workers for testing)

Note: we are using bullseye as a tag for the container stage (and not
testing) to ensure a nicer handoff in the coming weeks.

--- a/worker/Dockerfile.debian
+++ b/worker/Dockerfile.debian
@@ -4,13 +4,12 @@ RUN apt-get update && apt-get install -y libssl-dev libsodium-dev
 COPY . .
 RUN cd worker; cargo build --release
 
-FROM debian:buster
-RUN echo 'deb http://deb.debian.org/debian buster-backports main' > /etc/apt/sources.list.d/backports.list
-RUN apt-get update && apt-get install -y libssl-dev libsodium-dev devscripts/buster-backports sbuild
+FROM debian:bullseye
+RUN apt-get update && apt-get install -y libssl-dev libsodium-dev devscripts sbuild mmdebstrap
 COPY --from=0 \
     /usr/src/rebuilderd/worker/rebuilder-debian.sh \
     /usr/local/libexec/rebuilderd/
 COPY --from=0 \
     /usr/src/rebuilderd/target/release/rebuilderd-worker \
     /usr/local/bin/
-CMD ["rebuilderd-worker"]
+ENTRYPOINT ["rebuilderd-worker"]
