--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -33,3 +33,10 @@ glob = "0.3.0"
 nom = "6"
 tokio = { version="1", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
 atty = "0.2.14"
+tree_magic = "0.2.3"
+bzip2 = "0.4.3"
+xz = "0.1.0"
+zstd = "0.9.0"
+
+[dev-dependencies]
+base64 = "0.13.0"
