--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,5 +21,7 @@ services:
     build:
       context: .
       dockerfile: worker/Dockerfile.debian
+    cap_add:
+    - SYS_ADMIN
     environment:
     - REBUILDER_ADDR=http://daemon:8484
