Track required and supported rebuild backends

--- a/worker/Dockerfile.alpine
+++ b/worker/Dockerfile.alpine
@@ -1,13 +1,13 @@
-FROM rust:alpine3.10
+FROM rust:alpine3.14
 ENV RUSTFLAGS="-C target-feature=-crt-static"
 WORKDIR /usr/src/rebuilderd
 RUN apk add --no-cache musl-dev openssl-dev pkgconfig libsodium-dev
 COPY . .
 RUN cd worker; cargo build --release
 
-FROM alpine:3.10
+FROM alpine:3.14
 RUN apk add --no-cache libgcc openssl libsodium
 COPY --from=0 \
     /usr/src/rebuilderd/target/release/rebuilderd-worker \
     /usr/local/bin/
-CMD ["rebuilderd-worker"]
+ENTRYPOINT ["rebuilderd-worker"]
