--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -25,6 +25,7 @@ sodiumoxide = { version="0.2.5", features=["use-pkg-config"] }
 base64 = "0.13"
 toml = "0.5.6"
 serde = { version="1.0", features=["derive"] }
+serde_json = "1"
 reqwest = { version="0.11", features = ["stream"] }
 tempfile = "3.1.0"
 url = "2.1.1"
@@ -32,3 +33,4 @@ tokio = { version="1", features=["macros", "rt-multi-thread", "fs", "io-util", "
 futures-util = "0.3.7"
 futures = "0.3.7"
 nix = "0.22"
+in-toto = "0.1.1"
