--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,21 +1,52 @@
 name: Docker
 
 on:
+  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      run: docker build -t rebuilderd .
-    - name: Test the Docker image (rebuilderd)
-      run: docker run --rm rebuilderd rebuilderd --help
-    - name: Test the Docker image (rebuildctl)
-      run: docker run --rm rebuilderd rebuildctl --help
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      -
+        name: Build Docker images
+        uses: docker/build-push-action@v2
+        with:
+          load: true
+          tags: rebuilderd
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache-new
+      -
+        name: Test Docker image (rebuilderd)
+        run: docker run --rm rebuilderd rebuilderd --help
+      -
+        name: Test Docker image (rebuildctl)
+        run: docker run --rm rebuilderd rebuildctl --help
+      -
+        # Temp fix
+        # https://github.com/docker/build-push-action/issues/252
+        # https://github.com/moby/buildkit/issues/1896
+        name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
