--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -33,7 +33,7 @@ glob = "0.3.0"
 nom = "6"
 tokio = { version="1", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
 atty = "0.2.14"
-tree_magic = "0.2.3"
+tree_magic_mini = "3"
 bzip2 = "0.4.3"
 xz = "0.1.0"
 zstd = "0.9.0"
