Add experimental tails support

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -23,3 +23,8 @@ suite = "main"
 architectures = ["amd64"]
 releases = ["buster", "sid"]
 source = "http://deb.debian.org/debian"
+
+[profile."tails"]
+distro = "tails"
+suite = "stable"
+source = "https://mirrors.wikimedia.org/tails/"
