--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -37,6 +37,8 @@ tree_magic_mini = "3"
 bzip2 = "0.4.3"
 xz = "0.1.0"
 zstd = { version = "0.9.0", features = ["pkg-config"] }
+regex = "1.5.4"
+url = "2.2.2"
 
 [dev-dependencies]
 base64 = "0.13.0"
