Add support for tails alpha releases

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -28,3 +28,8 @@ source = "http://deb.debian.org/debian"
 distro = "tails"
 suite = "stable"
 source = "https://mirrors.wikimedia.org/tails/"
+
+[profile."tails-alpha"]
+distro = "tails"
+suite = "alpha"
+source = "https://mirrors.wikimedia.org/tails/"
