--- a/.github/workflows/binaries.yml
+++ b/.github/workflows/binaries.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install dependencies
-      run: sudo apt-get install libsodium-dev libsqlite3-dev
+      run: sudo apt-get install libsodium-dev libsqlite3-dev libzstd-dev
 
     - name: Build
       run: cargo build --verbose --release
