--- a/worker/Dockerfile.archlinux
+++ b/worker/Dockerfile.archlinux
@@ -1,7 +1,7 @@
 # synax = docker/dockerfile:1.2
 FROM archlinux
 WORKDIR /usr/src/rebuilderd
-RUN pacman -Suy --noconfirm gcc pkgconf cargo openssl libsodium
+RUN pacman -Suy --noconfirm gcc pkgconf cargo openssl
 COPY . .
 RUN --mount=type=cache,target=/var/cache/buildkit \
     CARGO_HOME=/var/cache/buildkit/cargo \
@@ -10,7 +10,7 @@ RUN --mount=type=cache,target=/var/cache/buildkit \
     cp -v /var/cache/buildkit/archlinux/target/release/rebuilderd-worker /
 
 FROM archlinux
-RUN pacman -Suy --noconfirm archlinux-repro openssl libsodium
+RUN pacman -Suy --noconfirm archlinux-repro openssl
 COPY --from=0 \
     /usr/src/rebuilderd/worker/rebuilder-archlinux.sh \
     /usr/local/libexec/rebuilderd/
