Refactor rebuilderd-worker configuration

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -22,3 +22,12 @@ enabled = false
 ## Set a maximum diffoscope output limit in bytes (default: none).
 ## When reaching this limit, diffoscope is terminated and the output is truncated.
 max_bytes = 41943040 # 40 MiB
+
+[backend."archlinux"]
+path = "/usr/libexec/rebuilderd/rebuild-archlinux.sh"
+
+[backend."debian"]
+path = "/usr/libexec/rebuilderd/rebuild-debian.sh"
+
+[backend."tails"]
+path = "/usr/libexec/rebuilderd/rebuild-tails.sh"
