--- a/worker/Dockerfile.debian
+++ b/worker/Dockerfile.debian
@@ -15,4 +15,5 @@ COPY --from=0 \
     /usr/src/rebuilderd/worker/rebuilder-debian.sh \
     /usr/local/libexec/rebuilderd/
 COPY --from=0 /rebuilderd-worker /usr/local/bin/
+ENV REBUILDERD_WORKER_BACKEND=debian=/usr/local/libexec/rebuilderd/rebuild-debian.sh
 ENTRYPOINT ["rebuilderd-worker"]
