--- a/worker/Dockerfile.tails
+++ b/worker/Dockerfile.tails
@@ -16,4 +16,5 @@ COPY --from=0 \
     /usr/src/rebuilderd/worker/rebuilder-tails.sh \
     /usr/local/libexec/rebuilderd/
 COPY --from=0 /rebuilderd-worker /usr/local/bin/
+ENV REBUILDERD_WORKER_BACKEND=tails=/usr/local/libexec/rebuilderd/rebuild-tails.sh
 ENTRYPOINT ["rebuilderd-worker"]
