Fix backend argument parsing when default config is used

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -24,6 +24,14 @@ architectures = ["amd64"]
 releases = ["buster", "sid"]
 source = "http://deb.debian.org/debian"
 
+[profile."debian-anarchism"]
+distro = "debian"
+suite = "main"
+architectures = ["amd64"]
+releases = ["sid"]
+pkgs = ["anarchism"]
+source = "http://deb.debian.org/debian"
+
 [profile."tails"]
 distro = "tails"
 suite = "stable"
