--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -32,6 +32,15 @@ releases = ["sid"]
 pkgs = ["anarchism"]
 source = "http://deb.debian.org/debian"
 
+[profile."debian-kpcyrd"]
+distro = "debian"
+suite = "main"
+architectures = ["amd64"]
+releases = ["sid"]
+# my own packages
+pkgs = ["rust-sniffglue", "rust-dfrs"]
+source = "http://deb.debian.org/debian"
+
 [profile."tails"]
 distro = "tails"
 suite = "stable"
