Rewrite debian package index parser

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -21,7 +21,8 @@ source = "https://ftp.halifax.rwth-aachen.de/archlinux/$repo/os/$arch"
 distro = "debian"
 suite = "main"
 architectures = ["amd64"]
-releases = ["buster", "sid"]
+#releases = ["buster", "sid"]
+releases = ["sid"]
 source = "http://deb.debian.org/debian"
 
 [profile."debian-anarchism"]
@@ -38,7 +39,7 @@ suite = "main"
 architectures = ["amd64"]
 releases = ["sid"]
 # my own packages
-pkgs = ["rust-sniffglue", "rust-dfrs"]
+pkgs = ["sniffglue", "dfrs"]
 source = "http://deb.debian.org/debian"
 
 [profile."tails"]
