--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -33,13 +33,13 @@ releases = ["sid"]
 pkgs = ["anarchism"]
 source = "http://deb.debian.org/debian"
 
-[profile."debian-kpcyrd"]
+# a set of packages to test certain edge-cases
+[profile."debian-misc"]
 distro = "debian"
 suite = "main"
 architectures = ["amd64"]
 releases = ["sid"]
-# my own packages
-pkgs = ["sniffglue", "dfrs"]
+pkgs = ["anarchism", "binutils-arm-none-eabi", "libglib2.0-bin", "libglib2.0-dev", "sniffglue", "librust-sniffglue-dev", "dfrs", "librust-dfrs-dev"]
 source = "http://deb.debian.org/debian"
 
 [profile."tails"]
