--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        build:
+        - name: rebuilderd
+          file: Dockerfile
+        - name: worker-alpine
+          file: worker/Dockerfile.alpine
+        - name: worker-archlinux
+          file: worker/Dockerfile.archlinux
+        - name: worker-debian
+          file: worker/Dockerfile.debian
+        - name: worker-tails
+          file: worker/Dockerfile.tails
     steps:
       -
         name: Checkout
@@ -29,19 +43,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
       -
-        name: Build Docker images
+        name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           load: true
-          tags: rebuilderd
+          tags: ${{ matrix.build.name }}
+          file: ${{ matrix.build.file }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache-new
       -
         name: Test Docker image (rebuilderd)
         run: docker run --rm rebuilderd rebuilderd --help
+        if: matrix.build.name == 'rebuilderd'
       -
         name: Test Docker image (rebuildctl)
         run: docker run --rm rebuilderd rebuildctl --help
+        if: matrix.build.name == 'rebuilderd'
       -
         # Temp fix
         # https://github.com/docker/build-push-action/issues/252
