--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -29,6 +29,7 @@ env_logger = "0.9"
 rand = "0.8"
 rebuilderd-common = { version= "=0.15.0", path="../common" }
 serde = { version="1.0", features=["derive"] }
+serde_json = "1.0.71"
 structopt = "0.3"
 toml = "0.5.6"
 
