--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -26,6 +26,7 @@ diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
 dirs-next = "2"
 dotenv = "0.15"
 env_logger = "0.9"
+log = "0.4.14"
 rand = "0.8"
 rebuilderd-common = { version= "=0.15.0", path="../common" }
 serde = { version="1.0", features=["derive"] }
