--- a/worker/Dockerfile.debian
+++ b/worker/Dockerfile.debian
@@ -10,7 +10,7 @@ RUN --mount=type=cache,target=/var/cache/buildkit \
     cp -v /var/cache/buildkit/debian/target/release/rebuilderd-worker /
 
 FROM debian:bullseye
-RUN apt-get update && apt install -y libssl-dev git mmdebstrap \
+RUN apt-get update && apt install -y libssl-dev git mmdebstrap diffoscope \
     python3-apt python3-dateutil python3-requests python3-rstr python3-setuptools python3-httpx python3-tenacity \
     debian-keyring debian-archive-keyring debian-ports-archive-keyring
 # this is a temporary solution
