--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -19,19 +19,19 @@ assets = [
 ]
 
 [dependencies]
-actix-web = "3"
-chrono = { version = "0.4", features=["serde"] }
-diesel = { version = "^1.1.0", features = ["sqlite", "r2d2", "chrono"] }
-diesel_migrations = { version = "1.3.0", features = ["sqlite"] }
-dirs-next = "2"
-dotenv = "0.15"
-env_logger = "0.9"
-log = "0.4.14"
-rand = "0.8"
+actix-web = "4.1.0"
+chrono = { version = "0.4.19", features=["serde"] }
+diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono"] }
+diesel_migrations = { version = "1.4.0", features = ["sqlite"] }
+dirs-next = "2.0.0"
+dotenv = "0.15.0"
+env_logger = "0.9.0"
+log = "0.4.17"
+rand = "0.8.5"
 rebuilderd-common = { version= "=0.18.1", path="../common" }
-serde = { version="1.0", features=["derive"] }
-serde_json = "1.0.71"
-structopt = "0.3"
-toml = "0.5.6"
+serde = { version="1.0.137", features=["derive"] }
+serde_json = "1.0.81"
+structopt = "0.3.26"
+toml = "0.5.9"
 
 # https://crates.io/crates/deb-version
