--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -20,9 +20,9 @@ assets = [
 [dependencies]
 rebuilderd-common = { version= "=0.19.0", path="../common" }
 structopt = "0.3.26"
-env_logger = "0.9.0"
-base64 = "0.13.0"
-toml = "0.5.9"
+env_logger = "0.10.0"
+data-encoding = "2"
+toml = "0.8"
 serde = { version="1.0.137", features=["derive"] }
 serde_json = "1.0.81"
 reqwest = { version="0.11.11", features = ["stream"] }
@@ -31,6 +31,6 @@ url = "2.2.2"
 tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
 futures-util = "0.3.21"
 futures = "0.3.21"
-nix = "0.25"
+nix = { version = "0.27", features = ["process", "signal"] }
 in-toto = "0.3"
 async-trait = "0.1.56"
