--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -39,6 +39,7 @@ xz = "0.1.0"
 zstd = { version = "0.11.2", features = ["pkg-config"] }
 regex = "1.5.6"
 url = "2.2.2"
+serde-xml-rs = "0.6.0"
 
 [dev-dependencies]
 base64 = "0.13.0"
