Preliminary NixOS rebuilding support
Taking pkgs specs of the form:

```
[
  {
    "name": "zlib",
    "version": "1.3@q9jf8xl1gsfmx4f1jhqpdc11yf0w9gv4",
    "distro": "nixos",
    "suite": "core",
    "architecture": "x86_64",
    "input_url": "https://cache.nixos.org/q9jf8xl1gsfmx4f1jhqpdc11yf0w9gv4.narinfo",
    "artifacts": [
      {
        "name": "zlib",
        "version": "1.3",
        "url": "https://cache.nixos.org/nar/1dv9dwz64z347s8b5s78lqrbgdl4xcm0l98zd9cm7jnz1ljd1gjy.nar.xz"
      }
    ]
  }
]
```

Yay:

```
Comparing "/tmp/rebuilderd03zPu6/inputs/1dv9dwz64z347s8b5s78lqrbgdl4xcm0l98zd9cm7jnz1ljd1gjy.nar.xz" with "/tmp/rebuilderd03zPu6/out/1dv9dwz64z347s8b5s78lqrbgdl4xcm0l98zd9cm7jnz1ljd1gjy.nar.xz"
```

--- a/contrib/confs/rebuilderd-worker.conf
+++ b/contrib/confs/rebuilderd-worker.conf
@@ -31,3 +31,6 @@ path = "/usr/libexec/rebuilderd/rebuilder-debian.sh"
 
 [backend."tails"]
 path = "/usr/libexec/rebuilderd/rebuilder-tails.sh"
+
+[backend."nixos"]
+path = "/usr/libexec/rebuilderd/rebuilder-nixos.sh"
