--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -3,7 +3,7 @@ name = "rebuilderd"
 version = "0.20.0"
 description = "rebuilderd - independent build verification daemon"
 authors = ["kpcyrd <git@rxv.cc>"]
-license = "GPL-3.0"
+license = "GPL-3.0-or-later"
 repository = "https://github.com/kpcyrd/rebuilderd"
 edition = "2018"
 
