--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,11 +11,12 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.58"
-log = "0.4.17"
-serde = { version="1.0.137", features=["derive"] }
-reqwest = { version="0.12", features=["blocking", "json"] }
 chrono = { version = "0.4.19", features=["serde"] }
+clap = "4.5.21"
 colored = "2.0.0"
 dirs-next = "2.0.0"
+log = "0.4.17"
+reqwest = { version="0.12", features=["blocking", "json"] }
+serde = { version="1.0.137", features=["derive"] }
 toml = "0.8"
 url = "2.2.2"
