--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -21,6 +21,7 @@ assets = [
 [dependencies]
 actix-web = "4.1.0"
 chrono = { version = "0.4.19", features=["serde"] }
+clap = { version = "4", features = ["derive"] }
 diesel = { version = "2", features = ["sqlite", "r2d2", "chrono", "i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
 diesel_migrations = { version = "2", features = ["sqlite"] }
 dirs-next = "2.0.0"
@@ -31,7 +32,6 @@ rand = "0.8.5"
 rebuilderd-common = { version= "=0.21.0", path="../common" }
 serde = { version="1.0.137", features=["derive"] }
 serde_json = "1.0.81"
-structopt = "0.3.26"
 toml = "0.8"
 
 # https://crates.io/crates/deb-version
