--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -16,28 +16,29 @@ assets = [
 ]
 
 [dependencies]
-rebuilderd-common = { version= "=0.21.0", path="../common" }
-structopt = "0.3.26"
-env_logger = "0.11"
-reqwest = { version="0.12", features=["json"] }
+atty = "0.2.14"
+bzip2 = "0.4.3"
 chrono = { version = "0.4.19", features=["serde"] }
-tar = "0.4.38"
-flate2 = "1.0.24"
-serde = { version="1.0.137", features=["derive"] }
-serde_json = "1.0.81"
+clap = { version = "4", features = ["derive"] }
+clap_complete = "4.5.38"
 colored = "2.0.0"
-toml = "0.8"
 dirs-next = "2.0.0"
+env_logger = "0.11"
+flate2 = "1.0.24"
 glob = "0.3.0"
 nom = "7.1.1"
+rebuilderd-common = { version= "=0.21.0", path="../common" }
+regex = "1.5.6"
+reqwest = { version="0.12", features=["json"] }
+serde = { version="1.0.137", features=["derive"] }
+serde_json = "1.0.81"
+tar = "0.4.38"
 tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "io-std", "io-util"] }
-atty = "0.2.14"
+toml = "0.8"
 tree_magic_mini = "3.0.3"
-bzip2 = "0.4.3"
+url = "2.2.2"
 xz2 = "0.1"
 zstd = { version = "0.13", features = ["pkg-config"] }
-regex = "1.5.6"
-url = "2.2.2"
 
 [dev-dependencies]
 data-encoding = "2"
