--- a/worker/Cargo.toml
+++ b/worker/Cargo.toml
@@ -18,19 +18,19 @@ assets = [
 ]
 
 [dependencies]
-rebuilderd-common = { version= "=0.21.0", path="../common" }
-structopt = "0.3.26"
-env_logger = "0.11"
+async-trait = "0.1.56"
+clap = { version = "4", features = ["derive", "env"] }
 data-encoding = "2"
-toml = "0.8"
+env_logger = "0.11"
+futures = "0.3.21"
+futures-util = "0.3.21"
+in-toto = "0.3"
+nix = { version = "0.29", features = ["process", "signal"] }
+rebuilderd-common = { version= "=0.21.0", path="../common" }
+reqwest = { version="0.12", features = ["stream"] }
 serde = { version="1.0.137", features=["derive"] }
 serde_json = "1.0.81"
-reqwest = { version="0.12", features = ["stream"] }
 tempfile = "3.3.0"
-url = "2.2.2"
 tokio = { version="1.19.2", features=["macros", "rt-multi-thread", "fs", "io-util", "process", "io-std", "time"] }
-futures-util = "0.3.21"
-futures = "0.3.21"
-nix = { version = "0.29", features = ["process", "signal"] }
-in-toto = "0.3"
-async-trait = "0.1.56"
+toml = "0.8"
+url = "2.2.2"
