--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,7 +16,7 @@ clap = { version = "4.5.21", features = ["derive"] }
 colored = "2.0.0"
 dirs-next = "2.0.0"
 log = "0.4.17"
-reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
+reqwest = { version = "0.12", features = ["blocking", "json", "stream", "rustls-tls-native-roots"], default-features = false }
 serde = { version = "1.0.137", features = ["derive"] }
 toml = "0.8"
 url = "2.2.2"
