Allow importing multiple Debian releases, merged into one set

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -32,6 +32,13 @@ architectures = ["amd64"]
 releases = ["sid"]
 source = "http://deb.debian.org/debian"
 
+[profile."debian-unreleased"]
+distro = "debian"
+suite = "main"
+architectures = ["amd64"]
+releases = ["sid", "testing"]
+source = "http://deb.debian.org/debian"
+
 [profile."debian-anarchism"]
 distro = "debian"
 suite = "main"
