--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -32,7 +32,7 @@ in-toto = "0.4.0"
 log = "0.4.17"
 pem = "3"
 rand = "0.9"
-rebuilderd-common = { version = "=0.25.0", path = "../common" }
+rebuilderd-common = { version = "=0.25.0", features = ["diesel"], path = "../common" }
 serde = { version = "1.0.137", features = ["derive"] }
 serde_json = "1.0.81"
 tokio = "1.44.2"
