Rework the tools to use the new API.

--- a/contrib/confs/rebuilderd-sync.conf
+++ b/contrib/confs/rebuilderd-sync.conf
@@ -58,10 +58,12 @@ source = "http://deb.debian.org/debian"
 
 [profile."tails"]
 distro = "tails"
-suite = "stable"
+architectures = ["amd64"]
+releases = ["stable"]
 source = "https://mirrors.wikimedia.org/tails/"
 
 [profile."tails-alpha"]
 distro = "tails"
-suite = "alpha"
+architectures = ["amd64"]
+releases = ["alpha"]
 source = "https://mirrors.wikimedia.org/tails/"
