Add `transparently_sign_attestations` setting that can be turned off

--- a/contrib/confs/rebuilderd.conf
+++ b/contrib/confs/rebuilderd.conf
@@ -5,6 +5,10 @@
 ## If you use a reverse proxy, use this header instead of the actual connecting ip.
 ## Make sure the reverse proxy has filters in place to prevent spoofing issues.
 #real_ip_header = "X-Real-IP"
+## By default, the daemon attaches a new signature to existing attestations,
+## if there is no signature by the current long-term private key yet.
+## To turn this off, change this setting to `false` explicitly.
+#transparently_sign_attestations = true
 ## Set a default endpoint for rebuildctl. This is especially useful for the sync timer.
 #endpoint = "http://127.0.0.1:8484"
 
